Cleaning up warnings after java upgrade